@@ -1,5 +1,12 @@
 2007-05-13  Sven Neumann  <sven@gimp.org>
 
+	* app/widgets/gimpfiledialog.c (gimp_file_dialog_new): add a
+	shortcut to the user's Pictures folder.
+
+	* libgimpbase/xdg-user-dir.c: cosmetic changes.
+
+2007-05-13  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/help/gimp-help-lookup.c: include libgimpbase/gimpbase.h.
 
 2007-05-13  Sven Neumann  <sven@gimp.org>
